--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.1",
     "daisyui": "^3.7.3",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
